<resources>
    <string name="app_name">BerBuah</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Favorites</string>
    <string name="title_setting">Setting</string>

    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="deteksi">Deteksi</string>

    <string name="add">Add</string>
    <string name="image_story">Image Story</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="Search">Cari</string>
    <string name="fruitImg">fruit_description</string>

    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="message_welcome_page">App where you can post your own picture and share it with other!</string>
    <string name="title_welcome_page">Welcome to PhotoApp!</string>
    <string name="title_signup_page">Isi Datamu!</string>
    <string name="message_login">Login dulu yah!</string>
    <string name="title_login">Sudah siap untuk upgrade skill?</string>
    <string name="backToLogin">Kembali ke halaman login</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="greeting">Hello, %1$s,</string>
    <string name="password_error">Password should have at least 6 characters</string>
    <string name="email_error">Email must be in correct format</string>
    <string name="username">Username</string>
    <string name="input_name">Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="close_button">Back</string>
    <string name="image_login">Image Login</string>
    <string name="image_signup">Image Signup</string>
    <string name="pilih_gambar">Pilih gambar yang kamu inginkan</string>
    <string name="input_fruit_name">Masukkan nama buah</string>
    <string name="not_found">Buah yang kamu cari tidak ada</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="invalid_permission">Invalid Permission</string>
    <string name="search_fruit">Pencarian Buah</string>
    <string name="fruit_detection">Nama Buah</string>
    <string name="detect">DETECT</string>
    <string name="detail">DETAIL</string>
    <string name="nama_latin">Nama Latin</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="deskripsi_buah">Pisang adalah buah yang dikenal luas di Indonesia. Buah pisang bisa dinikmati dengan berbagai cara: dimakan langsung, digoreng, dikukus, atau diolah bersama bahan lain. Tapi pisang tidak hanya enak, manfaatnya banyak.</string>
    <string name="manfaat">Manfaat</string>
    <string name="nutrisi">Nutrisi</string>
    <string name="air">Air</string>
    <string name="gram">gram</string>
    <string name="isi_nutrisi">75</string>
    <string name="kalori">Kalori</string>
    <string name="karbohidrat">Karbohidrat</string>
    <string name="gula">Gula</string>
    <string name="lemak">Lemak</string>
    <string name="protein">Protein</string>
    <string name="serat">Serat</string>
    <string name="fosfor">Fosfor</string>
    <string name="kalsium">Kalsium</string>
    <string name="id">AUYiQLMZmVCN8rNmlc5U</string>
    <string name="favorite_fruit">Buah Favorit</string>
    <string name="user_setting">Profil Pengguna</string>
    <string name="signout">Sign Out</string>
    <string name="dummy_username">anandafajar</string>
    <string name="dummy_name">Ananda Fajar</string>
    <string name="dummy_email">ananda.fajar@bangkit.academy</string>
    <string name="hasil_prediksi">Hasil Prediksi</string>
    <string name="title_profil">Profil</string>
    <string name="yuk_daftar">Belum punya akun? Yuk daftar dulu</string>
    <string name="yuk_login">Sudah punya akun? Yuk login</string>
    <string name="berbuah">BerBuah</string>
    <string name="add_fruit">Add fruit</string>
    <string name="add_successfully">Sukses menambahkan buah favorit</string>
    <string name="delete_successfully">Sukses menghapus buah favorit</string>

</resources>